--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -8,6 +8,7 @@
     width: 300px;
     border-radius: 10px;
     font-size: 16px;
+    margin-left: 20px;
 }
 
 .input:focus {
